Finished unit 6 assignment

--- a/memory_game/css/style.css
+++ b/memory_game/css/style.css
@@ -38,6 +38,11 @@ nav{
     background-color: #00A6B3;
     color: #FFFFFF;
     padding: 20px 0;
+    border-bottom: 2px solid transparent;
+}
+a:hover{
+    background-color: white;
+    color:black;
 }
 main{
     width: 850px;
@@ -45,4 +50,33 @@ main{
 }
 img{
     margin: 40px 8px;
+}
+footer{
+    text-transform: uppercase;
+    padding: 0 20px;
+    background-color: white;
+    font-size: 14px;
+    letter-spacing: .08em;
+    font-weight: 500;
+
+}
+.copyright{
+    font-family: 'Raleway', sans-serif;
+    float: left;
+}
+.message{
+    font-family: 'Raleway', sans-serif;
+    float: right;
+}
+.clearfix:after {
+    visibility: hidden;
+    display: block;
+    content: " ";
+    clear: both;
+    height: 0;
+    font-size: 0;
+}
+.name{
+    color: #F15B31;
+    font-weight: 700;
 }
